--- a/signup.html
+++ b/signup.html
@@ -259,7 +259,7 @@
                 }
 
                 try {
-                    const response = await fetch('http://localhost:5000/signup', {
+                    const response = await fetch('/register', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
