fix: Update Google OAuth URLs to use relative paths
- Changed hardcoded localhost URLs to relative paths in login.html and signup.html
- Google OAuth buttons now use '/auth/google' instead of 'http://localhost:5000/auth/google'
- This fixes Google OAuth login issues by making URLs work in any environment

--- a/signup.html
+++ b/signup.html
@@ -235,7 +235,7 @@
                 <span>or</span>
             </div>
 
-            <button type="button" class="google-btn" onclick="window.location.href='http://localhost:5000/auth/google'">
+            <button type="button" class="google-btn" onclick="window.location.href='/auth/google'">
                 <i class="fab fa-google"></i>
                 Sign up with Google
             </button>
