--- a/login.html
+++ b/login.html
@@ -236,7 +236,7 @@
                 <span>or</span>
             </div>
 
-            <button type="button" class="google-btn" onclick="window.location.href='http://localhost:5000/auth/google'">
+            <button type="button" class="google-btn" onclick="window.location.href='/auth/google'">
                 <i class="fab fa-google"></i>
                 Continue with Google
             </button>
